manifests/home-assistant/matter-hub.yaml
apiVersion: v1
kind: Service
metadata:
  name: matter-hub
  namespace: home-assistant
spec:
  selector:
    app: matter-hub
  ports:
    - name: http
      port: 8482
      targetPort: 8482
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matter-hub
  namespace: home-assistant
spec:
  serviceName: matter-hub
  replicas: 1
  selector:
    matchLabels:
      app: matter-hub
  template:
    metadata:
      labels:
        app: matter-hub
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: node-2
      containers:
        - name: matter-hub
          image: ghcr.io/t0bst4r/home-assistant-matter-hub:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8482
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
