manifests/home-assistant/esphome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: esphome
      app.kubernetes.io/name: esphome
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: esphome
        app.kubernetes.io/name: esphome
    spec:   
      hostNetwork: true
      hostPID: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: node-2     
      containers:
      - name: esphome-esphome-release
        image: esphome/esphome:stable
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 6052
          timeoutSeconds: 1
        ports:
        - containerPort: 6052
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 6052
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          failureThreshold: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 6052
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /config
          name: config-volume
        - mountPath: /cache
          name: cache-volume
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: esphome-config
      - name: cache-volume
        emptyDir:
          sizeLimit: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: home-assistant
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 6052
  selector:
    app.kubernetes.io/instance: esphome
    app.kubernetes.io/name: esphome
  type: LoadBalancer
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome-https-route
  namespace: home-assistant
spec:
  hostnames:
  - esphome.ashishverma.dev
  parentRefs:
  - name: envoy
    namespace: envoy-gateway-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: esphome
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
